@@ -229,3 +229,6 @@ t_seller_group = Seller group
 # series/import/list.html
 t_no_import_requests = No import requests
 t_import_requests = import requests
+
+# AddCatalogNumbersForm.js
+t_numbers = Numbers
