@@ -228,3 +228,6 @@ t_seller_group = Группа продавца
 # series/import/list.html
 t_no_import_requests = Нет запросов на импорт
 t_import_requests = запросы на импорт
+
+# AddCatalogNumbersForm.js
+t_numbers = Номера
